--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -51,6 +51,7 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 kubernetes==32.0.0
 langchain==0.3.18
+langchain-chroma==0.2.1
 langchain-community==0.3.17
 langchain-core==0.3.34
 langchain-openai==0.3.4
