--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,7 +13,6 @@ cachetools==5.5.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 chroma-hnswlib==0.7.6
-chromadb==0.6.3
 click==8.1.8
 colorama==0.4.6
 coloredlogs==15.0.1
@@ -50,11 +49,8 @@ jiter==0.8.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 kubernetes==32.0.0
-langchain==0.3.18
-langchain-chroma==0.2.1
 langchain-community==0.3.17
 langchain-core==0.3.34
-langchain-openai==0.3.4
 langchain-text-splitters==0.3.6
 langsmith==0.3.6
 markdown-it-py==3.0.0
@@ -94,7 +90,9 @@ pydantic==2.10.6
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
 Pygments==2.19.1
+PyMuPDF==1.25.3
 pypdf==5.2.0
+PyPDF2==3.0.1
 PyPika==0.48.9
 pypiwin32==223
 pyproject_hooks==1.2.0
