--- a/frontend/ai-voice-app/package.json
+++ b/frontend/ai-voice-app/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "generate-component": "npx generate-react-cli component $1 && ./rename-to-jsx.sh"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.4",
@@ -17,15 +19,22 @@
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.8",
+    "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.19.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "generate-react-cli": "^8.4.9",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
     "vite": "^6.1.0"
   }
 }
