--- a/frontend/ai-voice--app/package.json
+++ b/frontend/ai-voice--app/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3",
+    "react-router-dom": "^7.1.5",
     "recordrtc": "^5.6.2",
     "tailwindcss": "^4.0.6"
   },
