--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -95,7 +95,7 @@ PyMuPDF==1.25.3
 pypdf==5.2.0
 PyPDF2==3.0.1
 PyPika==0.48.9
-pypiwin32==223
+# pypiwin32==223
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
 pytest==8.3.4
@@ -103,7 +103,7 @@ pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
-pywin32==308
+# pywin32==308
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
