--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - TDA_FILE_PATH=${TDA_FILE_PATH}
-      - HWHR_FILE_PATH=${HWHR_FILE_PATH}
+      - GENERAL_PROCEDURES_FILE_PATH=${GENERAL_PROCEDURES_FILE_PATH}
+      - GENERAL_RULES_FILE_PATH=${GENERAL_RULES_FILE_PATH}
 
   frontend:
     build:
